Add arsenic scss

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -102,7 +102,7 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: FF Tisa Sans Pro Medium;
+$header-font-family: FF Tisa OT;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
@@ -128,12 +128,18 @@ $header-sizes: (
     'h4': 25,
     'h5': 20,
     'h6': 16, */
-    'h1': 50,
+   /* 'h1': 50,
     'h2': 37,
     'h3': 28,
     'h4': 21,
     'h5': 16,
-    'h6': 12,
+    'h6': 12, */
+    'h1': 48.8,
+    'h2': 31,25,
+    'h3': 285,
+    'h4': 20,
+    'h5': 16,
+    'h6': 12.8, 
   ),
 );
 $header-color: inherit;
