--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -46,7 +46,9 @@ font-family: 'FF Tisa Sans Pro Regular'
   <body>
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
+    {{> header}}
     {{> body}}
+
 
     <script src="{{root}}assets/js/app.js"></script>
   </body>
