--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -18,7 +18,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin-top: .75rem;
+    margin-top: 1.5rem;
 }
 
 // header
@@ -67,7 +67,7 @@ nav {
 .intro {
     background-color: #555;
     padding: 1rem 0 2rem 0;
-    margin: 2rem 0;
+    margin: 1rem 0;
     h1 {
         color: whitesmoke;
         font-family: $as-header-family;
