Revised navigation menu (top-bar dropdown)
Created new “header-nav” file to hold this nav experiment. (Switch back
to old nav by changing the pointer in the default.html layout.)

Based on example:
https://zurb.com/expo/lessons/how-to-re-create-top-bar-with-foundation-6

Added Pivot ids to the menu anchors.

--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -61,6 +61,35 @@ nav {
     border-left: 1px solid #ddd;
 }
 
+// mjy 
+// via https://zurb.com/expo/lessons/how-to-re-create-top-bar-with-foundation-6 
+
+.title-bar {
+  background: $black;
+  padding: 0.9rem;
+  font-family: $as-header-family;
+}
+
+.top-bar {
+  background: $black;
+  
+  
+  ul {
+    background: $black;
+    font-family: $as-header-family;
+  
+    li {
+      background: $black;
+      
+      a {
+        color: $primary-color;
+      }
+    }
+  }
+}
+
+// end mjy
+
 // intro
 // ----------
 
