--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -46,7 +46,7 @@ font-family: 'FF Tisa Sans Pro Regular'
   <body>
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-    {{> header}}
+    {{> nav}}
     {{> body}}
 
 
