Removed "top bar" and now using "nav" as main element
Based on
http://foundation.zurb.com/sites/docs/responsive-navigation.html

--- a/src/partials/header-nav.html
+++ b/src/partials/header-nav.html
@@ -3,13 +3,12 @@
 		<div class="large-8 large-centered  columns">
 			<div class="program-name">Dartmouth Toxic Metals Superfund Research Program</div>
 			<div class="subheader program-title">Arsenic in Food and Water</div>
-				<!-- top bar nav here -->
+				<!-- title bar / nav here -->
 				<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
   				<button class="menu-icon" type="button" data-toggle></button>
   				<div class="title-bar-title">Menu</div>
 				</div> <!-- /title-bar -->
-				<div class="top-bar" id="main-menu">
-				<!-- <nav> --> <!-- mjy: might want to merge/choose between 'nav' and 'top-bar' styling -->
+				<nav id="main-menu"> 
 					<ul class="menu vertical medium-horizontal" data-responsive-menu="drilldown medium-dropdown">
 						<li><a href="1">Home</a></li>
 						<li><a href="10">Arsenic &amp; Your Health</a>
@@ -45,8 +44,7 @@
 							</ul>														
 						</li>
 					</ul>
-				<!-- </nav> -->
-				</div> <!-- /top-bar -->
+				</nav>
 			</div> <!-- /columns -->
 		</div> <!-- /row -->
 </header>
