Fixed a nav ul class error

--- a/src/partials/header-nav.html
+++ b/src/partials/header-nav.html
@@ -11,7 +11,7 @@
 				<ul class="menu vertical medium-horizontal" data-responsive-menu="drilldown medium-dropdown">
 					<li><a href="1">Home</a></li>
 					<li><a href="10">Arsenic &amp; Your Health</a>
-						<ul class="submenu menu medium-vertical">
+						<ul class="submenu menu vertical">
 							<li class="active10"><a href="10">Overview</a></li>
 							<li class="active11"><a href="11">Children</a></li>
 							<li class="active9"><a href="9">Gluten-Free</a></li>
