--- a/src/partials/header-nav.html
+++ b/src/partials/header-nav.html
@@ -11,14 +11,14 @@
 				<ul class="menu vertical medium-horizontal" data-responsive-menu="drilldown medium-dropdown">
 					<li><a href="1">Home</a></li>
 					<li class="has-submenu"><a href="10">Arsenic &amp; Your Health</a>
-						<ul class="submenu menu vertical" data-submenu>
+						<ul class="menu vertical">
 							<li class="active10"><a href="10">Overview</a></li>
 							<li class="active11"><a href="11">Children</a></li>
 							<li class="active9"><a href="9">Gluten-Free</a></li>
 						</ul>
 					</li>
 					<li class="has-submenu"><a href="14">Arsenic &amp; Food</a>
-						<ul class="submenu menu vertical" data-submenu>
+						<ul class="menu vertical">
 							<li class="active14"><a href="14">Overview</a></li>
 							<li class="active15"><a href="15">Infants</a></li>
 							<li class="active19"><a href="19">Rice</a></li>
@@ -29,14 +29,14 @@
 						</ul>
 					</li>
 					<li class="has-submenu"><a href="12">Arsenic &amp; Water</a>
-						<ul class="submenu menu vertical" data-submenu>
+						<ul class="menu vertical">
 							<li class="active12"><a href="12">Overview</a></li>
 							<li class="active20"><a href="20">Testing</a></li>
 							<li class="active21"><a href="21">Treatment</a></li>
 						</ul>							
 					</li>
 					<li class="has-submenu"><a href="7">Resources</a>
-						<ul class="submenu menu vertical" data-submenu>
+						<ul class="menu vertical">
 							<li class="active7"><a href="7">Overview</a></li>
 							<li class="active6"><a href="6">FAQs</a></li>
 							<li class="active8"><a href="8">Media</a></li>
