Fix responsive navigation drilldown

--- a/src/partials/header-nav.html
+++ b/src/partials/header-nav.html
@@ -8,7 +8,7 @@
 				<div class="title-bar-title">Menu</div>
 			</div> <!-- /title-bar -->
 			<nav id="main-menu"> 
-				<ul class="dropdown menu vertical medium-horizontal" data-dropdown-menu data-responsive-menu="drilldown medium-dropdown">
+				<ul class="dropdown menu vertical medium-horizontal" data-responsive-menu="drilldown medium-dropdown">
 					<li><a href="1">Home</a></li>
 					<li><a href="10">Arsenic &amp; Your Health</a>
 						<ul class="menu">
