--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,7 +6,7 @@
 
 @include foundation-global-styles;
 @include foundation-grid;
-// @include foundation-flex-grid;
+@include foundation-flex-grid;
 @include foundation-typography;
 @include foundation-button;
 @include foundation-forms;
@@ -14,7 +14,7 @@
 @include foundation-accordion;
 @include foundation-accordion-menu;
 @include foundation-badge;
-@include foundation-breadcrumbs;
+// @include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
 @include foundation-close-button;
@@ -28,7 +28,7 @@
 @include foundation-media-object;
 @include foundation-off-canvas;
 @include foundation-orbit;
-@include foundation-pagination;
+// @include foundation-pagination;
 @include foundation-progress-bar;
 // @include foundation-progress-element;
 // @include foundation-meter-element;
@@ -44,7 +44,7 @@
 @include foundation-top-bar;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
-// @include foundation-flex-classes;
+@include foundation-flex-classes;
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
