Attempt to prevent the  flash of unstyled content
as per http://foundation.zurb.com/sites/docs/responsive-navigation.html

--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -76,6 +76,13 @@ nav {
 	font-size: $pagination-font-size;
 }
 
+.no-js { 
+  @include breakpoint(medium) {
+    .title-bar {
+      display: none;
+    }
+  }
+}
 // end mjy
 
 // intro
