--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,40 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dartmouth Toxic Metals Superfund Research Program</title>
-     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic%7cRoboto+Slab:400,700%7cSource+Sans+Pro:400,400italic,600,600italic%7cLora:400,400italic%7cPT+Sans:400,400italic,700%7cPT+Serif:400,400italic,700,700italic%7cRoboto+Condensed:400,700' rel='stylesheet' type='text/css'>
-        <script type="text/javascript">
-        (function() {
-            var path = '//easy.myfonts.net/v2/js?sid=161158(font-family=FF+Tisa+OT+Med+Italic)&sid=161386(font-family=FF+Tisa+OT+Italic)&sid=161405(font-family=FF+Tisa+OT+Med)&sid=162052(font-family=FF+Tisa+OT)&key=eo1xNHp0YU',
-                protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
-                trial = document.createElement('script');
-            trial.type = 'text/javascript';
-            trial.async = true;
-            trial.src = protocol + path;
-            var head = document.getElementsByTagName("head")[0];
-            head.appendChild(trial);
-        })();
-        </script>
-        <script type="text/javascript">
-        (function() {
-            var path = '//easy.myfonts.net/v2/js?sid=239773(font-family=FF+Tisa+Sans+Pro+Bold)&sid=239789(font-family=FF+Tisa+Sans+Pro+Light)&sid=239801(font-family=FF+Tisa+Sans+Pro+Medium)&sid=239813(font-family=FF+Tisa+Sans+Pro+Regular)&key=mrl2sXHsAG',
-                protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
-                trial = document.createElement('script');
-            trial.type = 'text/javascript';
-            trial.async = true;
-            trial.src = protocol + path;
-            var head = document.getElementsByTagName("head")[0];
-            head.appendChild(trial);
-        })();
-        </script> 
-        <!-- font-family: 'FF Tisa OT Med Italic'
-    font-family: 'FF Tisa OT Italic'
-    font-family: 'FF Tisa OT Med'
-    font-family: 'FF Tisa OT' 
-font-family: 'FF Tisa Sans Pro Bold'
-font-family: 'FF Tisa Sans Pro Light'
-font-family: 'FF Tisa Sans Pro Medium'
-font-family: 'FF Tisa Sans Pro Regular'
-    -->
+     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700%7cPT+Serif:400,400italic,700,700italic%7c' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
   <body>
