First pass at styling blockquote

--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -111,6 +111,15 @@ nav {
    // font-family: 'FF Tisa OT Italic';
 }
 
+blockquote {
+    margin: 1rem 0 2rem -16.5%;
+    padding: 0.5625rem 1.25rem 0 1.1875rem;
+    /* border-left: 1px solid #cacaca; */
+    width: 133%;
+    font-size: 137.5%;
+    font-style: italic;
+}
+
 // main content
 //---------------
 
