Changes to templates so layout is less boxy
Also added blockquote and cite example

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -176,7 +176,7 @@ $defnlist-term-margin-bottom: 0.3rem;
 $blockquote-color: $dark-gray;
 $blockquote-padding: rem-calc(9 20 0 19);
 $blockquote-border: none;
-$cite-font-size: rem-calc(13);
+$cite-font-size: 75%;
 $cite-color: $dark-gray;
 $keystroke-font: $font-family-monospace;
 $keystroke-color: $black;
