changes to blockquote and media queries
also starting to play with color

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -49,7 +49,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #2199e8,
+ // primary: #71a520,
+  primary: #c9493c,
   secondary: #777,
   success: #3adb76,
   warning: #ffae00,
@@ -142,7 +143,7 @@ $header-sizes: (
     'h6': 12.8, 
   ),
 );
-$header-color: inherit;
+$header-color: #27380b;
 $header-lineheight: 1.4;
 $header-margin-bottom: 0.5rem;
 $header-text-rendering: optimizeLegibility;
