--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -23,10 +23,12 @@ h6 {
 
 h2,
 h3 {
-    margin-left: -16.66667%;
-    margin-right: -16.66667%;
-    padding-left: .9375rem;
-    padding-right: .9375rem;
+    @include breakpoint(medium) {
+        margin-left: -16.66667%;
+        margin-right: -16.66667%;
+        padding-left: .9375rem;
+        padding-right: .9375rem;
+    }
 }
 
 // header
@@ -52,7 +54,7 @@ h3 {
     line-height: 1.4;
     margin-top: 0;
     margin-bottom: 0;
-    color: #444;
+    color: #344749;
     text-align: center;
 }
 
@@ -105,7 +107,7 @@ nav {
 
 .intro/* , 
 .footer */ {
-    background-color: #555;
+    background-color: #344749;
     padding: 1rem 0 2rem 0;
     margin: 0 0 1rem 0;
     h1 {
@@ -114,21 +116,47 @@ nav {
 }
 
 .lead {
-    color: #ddd;
+    color: whitesmoke;
     font-weight: 700;
    // font-family: 'FF Tisa OT Italic';
 }
 
+/* .main-content-body > p:first-of-type:first-letter { 
+    float: left; 
+    color: #903; 
+    font-size: 5.2rem; 
+    line-height: 60px; 
+    padding-top: .15em; 
+    padding-right: 8px; 
+    padding-left: 3px; 
+    // margin-left: -1.5rem;
+ } */
+
+
 blockquote {
-    margin: 1rem -25% 2rem ;
-    padding: 0.9375rem 0;
-    font-size: 178.125%;
     font-style: italic;
 }
+
+@include breakpoint(large) {
+    blockquote {
+        margin: 1rem -25% 2rem ;
+        font-size: 178.125%;
+    }
+}
+ 
+@include breakpoint(medium only) {
+    blockquote {
+        margin: 1rem -6% 2rem ;
+        padding: 0.9375rem 0;
+        font-size: 140%;
+    }
+}
+
 
 cite {
     font-style: normal;
     text-align: right;
+    margin-top: 1em;
 }
 
 // main content
