--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -282,14 +282,15 @@ $buttongroup-expand-max: 6;
 // 13. Callout
 // -----------
 
-$callout-background: $white;
+$callout-background: #d7aa4c;
 $callout-background-fade: 85%;
-$callout-border: 1px solid rgba($black, 0.25);
-$callout-margin: 0 0 1rem 0;
+// $callout-border: 1px solid rgba($black, 0.25);
+$callout-border: none;
+$callout-margin: 2rem 0;
 $callout-padding: 1rem;
-$callout-font-color: $body-font-color;
+$callout-font-color: #000;
 $callout-font-color-alt: $body-background;
-$callout-radius: $global-radius;
+$callout-radius: 20px;
 $callout-link-tint: 30%;
 
 // 14. Close Button
