Change line-height on intor h1

--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -138,6 +138,7 @@ nav {
     margin: 0 0 1rem 0;
    h1 {
         text-shadow: rgba(0,0,0,0.5) 1px 1px 1px;
+        line-height: 1.175;
     } 
 }
 
