Updated header-nav with correct menu content
Related changes to newHeader.html, and removed old versions of files.

--- a/src/partials/header-nav.html
+++ b/src/partials/header-nav.html
@@ -1,6 +1,7 @@
 <header id="header">
 	<div class="row">
 		<div class="large-9 large-centered  columns">
+		%%pivot_messages%%
 			<div class="program-name">Dartmouth Toxic Metals Superfund Research Program</div>
 			<div class="subheader program-title">Arsenic in Food and Water</div>
 			<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
@@ -13,8 +14,14 @@
 					<li><a href="10">Arsenic &amp; Your Health</a>
 						<ul class="menu">
 							<li class="active10"><a href="10">Overview</a></li>
+							<li class="active23"><a href="23">Exposure</a></li>
+							<li class="active24"><a href="24">Health Effects</a></li>
 							<li class="active11"><a href="11">Children</a></li>
 							<li class="active9"><a href="9">Gluten-Free</a></li>
+							<li class="active27"><a href="27">Smoking</a></li>
+							<li class="active28"><a href="28">Pressure-Treated Wood</a></li>
+							<li class="active26"><a href="26">At-Risk Communities</a></li>
+
 						</ul>
 					</li>
 					<li><a href="14">Arsenic &amp; Food</a>
