--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -210,4 +210,62 @@ cite {
 
 .main-content {
     margin-bottom: 3rem;
+    shape-outside: polygon(nonzero, 1009px 143px, 1034px 102px, 1031px 46px, 1068px 3px, 1080px -55px, 1166px -55px, 1152px -13px, 1192px 49px, 1175px 98px, 1193px 144px, 1190px 463px, 993px 463px);
 }
+
+// backgrounds
+//---------------
+
+/* .bb {
+     &:after {
+    content: ""; 
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    bottom: 0;
+    right: 0;  
+    background-image: url(../img/babybottle.svg);
+    // background-color: red;
+    background-position: bottom 10% right 3%;
+    background-size: 10%;
+     background-repeat: no-repeat ;               
+     background-attachment: fixed;                   
+    filter: hue-rotate(100deg) saturate(1);
+    // clip-path: polygon(0 0, 80% 0, 35% 50%, 0 12%);
+
+     } 
+} */
+
+// calculate the percentage of container
+@function calc-percent($target, $container) {
+    @return ($target / $container) * 100%;
+}
+// shorthand
+@function cp($target, $container) {
+    @return calc-percent($target, $container);
+}
+
+.illustration {
+    float: right;
+
+    width: 18%;
+    margin: 0 30px 1em;
+        @media screen and (min-width: 640px) and (max-width: 1023px) {
+        margin-right: -12%;
+        width: 18%;
+    }
+
+    @media screen and (min-width: 1024px) {
+        margin-right: -25%;
+        width: 25%;
+    }
+   // filter: hue-rotate(20deg) ; 
+   // shape-outside: polygon(cp(21px, 168px) cp(201px, 534px), cp(58px, 168px) cp(157px, 534px), 45px 135px, 47px 84px, 86px 63px, 109px -5px, 258px -3px, 252px 545px, 44px 541px, 10px 513px);
+}
+
+
+
+
+
+
