New css for specific illustration classes

--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -265,7 +265,72 @@ cite {
 }
 
 
+// Specific classes for .illustrations
+// Named based on image rather than page, in case images are moved between pages 
 
+// TO-DO: Each of these probably need tuned @media specifications
 
+.bodies {
+	margin-right: -40% !important;
+	width: 35% !important;
+}
 
+.babybottle {
+	margin-right: -40% !important;
+	width: 25% !important;
+}
 
+.gluten-free {
+	margin-right: -40% !important;
+	width: 25% !important;
+}
+
+.cigs {
+	margin-right: -40% !important;
+	width: 30% !important;
+}
+
+.playstructure {
+	margin-right: -40% !important;
+	width: 35% !important;
+}
+
+.factory {
+	margin-right: -40% !important;
+	width: 35% !important;
+}
+
+.juice {
+	margin-right: -40% !important;
+	width: 30% !important;
+}
+
+.ricebowl {
+	margin-right: -40% !important;
+	width: 30% !important;
+}
+
+.hijiki {
+	margin-right: -40% !important;
+	width: 30% !important;
+}
+
+.chicken {
+	margin-right: -40% !important;
+	width: 25% !important;
+}
+
+.beer {
+	margin-right: -40% !important;
+	width: 30% !important;
+}
+
+.trowel {
+	margin-right: -45% !important;
+	width: 40% !important;
+}
+
+.nsf {
+	margin-right: -40% !important;
+	width: 35% !important;
+}
