--- a/src/assets/scss/components/arsenic.scss
+++ b/src/assets/scss/components/arsenic.scss
@@ -250,7 +250,7 @@ cite {
     float: right;
 
     width: 18%;
-    margin: 0 30px 1em;
+    margin: 30px 1em;
         @media screen and (min-width: 640px) and (max-width: 1023px) {
         margin-right: -12%;
         width: 18%;
@@ -292,7 +292,7 @@ cite {
 
 .playstructure {
 	margin-right: -40% !important;
-	width: 35% !important;
+	width: 80% !important;
 }
 
 .factory {
@@ -307,7 +307,7 @@ cite {
 
 .ricebowl {
 	margin-right: -40% !important;
-	width: 30% !important;
+	width: 50% !important;
 }
 
 .hijiki {
@@ -326,8 +326,9 @@ cite {
 }
 
 .trowel {
-	margin-right: -45% !important;
-	width: 40% !important;
+	margin-right: 0 !important;
+	width: 100% !important;
+            float: none !important; 
 }
 
 .nsf {
