Two new pages and associated nav update.

--- a/src/partials/header-nav.html
+++ b/src/partials/header-nav.html
@@ -45,6 +45,7 @@
 					<li><a href="7">Resources</a>
 						<ul class="menu">
 							<li class="active7"><a href="7">Overview</a></li>
+							<li class="active29"><a href="29">Glossary</a></li>
 							<li class="active6"><a href="6">FAQs</a></li>
 							<li class="active8"><a href="8">Media</a></li>
 						</ul>														
