font size and leading adjustments

--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -46,6 +46,29 @@ h3 {
     }
 }
 
+/*   small: 0,
+  medium: 640px,
+  large: 1024px,
+  xlarge: 1200px,
+  xxlarge: 1440px, */
+
+@include breakpoint(xxlarge) {
+    html {
+        font-size: 137.5%;
+    }
+}
+
+@include breakpoint(xlarge only) {
+    html {
+        font-size: 131.3%;
+    }
+}
+
+@include breakpoint(medium only)  {
+    html {
+        font-size: 118.8%;
+    }
+} 
 
 
 [role="menuitem"] a {
