font size media query fix

--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -64,7 +64,7 @@ h3 {
     }
 }
 
-@include breakpoint(medium only)  {
+@include breakpoint(large only)  {
     html {
         font-size: 118.8%;
     }
