--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -97,7 +97,7 @@ header {
     margin-bottom: .5rem;
     /* padding: 0 2rem; */
     color: $tertiary-color;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
 .program-title {
