--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -41,9 +41,9 @@ h2 {
 
 h3 {
     color: $secondary-color; 
-    .callout & {
+/*     .callout & {
     color: darken($secondary-color, 15%)
-    }
+    } */
 }
 
 /*   small: 0,
@@ -91,10 +91,10 @@ header {
 .program-name {
     font-family: $header-font-family;
     font-weight: $global-weight-bold;
-    font-size: rem-calc(22);
+    font-size: rem-calc(28);
     line-height: 1.1;
     margin-top: 2rem;
-    margin-bottom: .5rem;
+    /* margin-bottom: .5rem; */
     /* padding: 0 2rem; */
     color: $tertiary-color;
     /* text-transform: uppercase; */
@@ -157,12 +157,20 @@ nav {
 }
 
 .footer {
+    /* color: transparentize(255, 255, 255, .3); */
+    color: transparentize(#fff, .3);
     font-family: $header-font-family;
     font-weight: $global-weight-normal;
     font-size: $pagination-font-size;
-    border-top: .3em solid #006268;
+    background-color: $tertiary-color;
+    /*border-top: .3em solid #006268; */
     padding-top: 2em;
     margin-top: 5em;
+    a {
+        color: #fff;
+        font-weight: 700;
+        /* text-decoration: underline; */
+    }
 }
 
 // end mjy
@@ -215,7 +223,7 @@ blockquote {
     font-size: 110.5%;
     font-style: italic;
     // border-top: .3em solid lighten($primary-color, 25%);
-    border-top: .3em solid $tertiary-color;
+    border-top: .3em solid #dfac4e;
 }
 
 @include breakpoint(large) {
